frontend-org/app/src/pages/home/styles.module.css
.hero {
  background-color: var(--mui-palette-primary-light);
  display: flex;
  flex-basis: 0;
  align-items: center;
}

.heroInner {
  display: flex;
  flex-basis: 0;
  flex-grow: 1;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.heroGrid {
  width: 100%;
  display: flex;
  align-items: center;
  svg {
    height: 150px;
    width: fit-content;
  }
}

.heroImageBox {
  position: relative;
}

.heroImage {
  width: 100%;
  height: 100%;
  border-radius: 8px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-position: center;
  background-size: cover;
  transition:
    visibility 0s,
    opacity 1s linear;
}

.heroTextBox {
  z-index: 100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.heroLogo {
  svg {
    height: min-content;
    border: 4px solid var(--mui-palette-secondary-main);
  }
}

.heroTitle {
  color: var(--mui-palette-secondary-main);
  margin: 24px 0 16px 0 !important;
}

.heroSubtitle {
  color: var(--mui-palette-text-primary);
  text-wrap: balance;
}

.heroButton {
  margin-top: 16px !important;
  color: var(--mui-palette-text-primary) !important;
  border: 1px solid var(--mui-palette-text-primary) !important;
}

.homeGrid {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.link {
  display: inline-flex;
  align-content: center;
  cursor: pointer;
}

.iconEast {
  margin-left: 4px;
  margin-top: 1px;
}

.postsGrid {
  display: flex;
  flex-basis: 0;
  align-items: center;
  padding: 32px 0;
}

.postsInnerGrid {
  margin-bottom: 32px;
}

.postsTitle {
  text-align: center;
  color: var(--mui-palette-secondary-main);
  margin-bottom: 32px !important;
}

.postCard {
  display: flex;
  border: var(--mui-palette-divider) solid 1px;
  border-radius: 4px;
}

.postCardContent {
  padding: 20px 24px 8px 24px !important;
}

.pageLoader {
  align-content: center;
  flex: 1;
  display: flex;
}

.heroSectionSubtitle {
  font-size: 16px !important;
  color: #fff;
}

.joinButtons {
  display: flex;
  justify-content: center;
}

